# MAI_OS

./: README.md
1_Lab/: Makefile
1_Lab/src/calls/: calls.cpp
2_Lab/: Makefile  README.md
2_Lab/analytics/: draw_graphic.py
2_Lab/data_files/: metrics.txt  test_data.txt
3_Lab/: CMakeLists.txt  Makefile
3_Lab/include/calls/: calls.h
3_Lab/include/processes/: child_process.h  parent_process.h
3_Lab/run_files/: run_child.cpp  run_parent.cpp
3_Lab/src/calls/: calls.cpp
3_Lab/src/processes/: child_process.cpp  parent_process.cpp
4_Lab/: Makefile  README.md
5-7_Lab/: Makefile  node  node.cpp  run.cpp  server
